# outlook_agent

./: LICENSE  README.md
outlook-agent/: pyproject.toml
outlook-agent/src/outlook-agent/: agent.py
outlook-agent/tests/: test_agent.py
